crates/languages/bevy_mod_scripting_lua_derive/tests/success/references/proxy-non-receiver-reference.rs
use bevy::prelude::*;
use bevy_mod_scripting::api::*;

#[derive(ScriptProxy, Reflect)]
#[proxy(languages("lua"), derive(Clone))]
#[functions[
    #[lua(Function)]
    fn fn_returning_some_string(#[proxy] other: &Self) -> String;

]]
#[derive(Clone)]
pub struct MyStruct {
    some_string: String,
    me_vec: Vec<usize>,
}

impl MyStruct {
    pub fn fn_returning_some_string(other: &Self) -> String {
        other.some_string.clone()
    }
}

pub fn main() {}
